--- a/src/pages/random/random.scss
+++ b/src/pages/random/random.scss
@@ -26,6 +26,31 @@ page-random {
         background-repeat: no-repeat;
     }
 
+    .back{
+        width: 60px;
+        position: absolute;
+        z-index: 999;
+        left: 5%;
+        top: 10px;
+        -moz-transform: translateY(-150px);
+        -webkit-transform: translateY(-150px);
+        -o-transform: translateY(-150px);
+        -ms-transform: translateY(-150px);
+        transform: translateY(-150px);
+        -webkit-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        -moz-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        -ms-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        -o-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+
+        &.show-btn-back{
+            -moz-transform: translateY(10px);
+            -webkit-transform: translateY(10px);
+            -o-transform: translateY(10px);
+            -ms-transform: translateY(10px);
+            transform: translateY(10px);
+        }
+    }
     .pulse {
         display: block;
         width: 100px;
@@ -79,11 +104,11 @@ page-random {
         }
 
         &.show-btn-back{
-            -moz-transform: translateY(0);
-            -webkit-transform: translateY(0);
-            -o-transform: translateY(0);
-            -ms-transform: translateY(0);
-            transform: translateY(0);
+            -moz-transform: translateY(10px);
+            -webkit-transform: translateY(10px);
+            -o-transform: translateY(10px);
+            -ms-transform: translateY(10px);
+            transform: translateY(10px);
         }
     }
     
