--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -24,7 +24,7 @@ page-home {
         position: absolute;
         left: 50%;
         top: 50%;
-        margin-left: -60px;
+        margin-left: 0;
         margin-top: -60px;
         border: 3px solid #ff6b02;
         text-align: center;
@@ -79,6 +79,42 @@ page-home {
         100% {
             -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
             box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+        }
+    }
+
+
+    .mute {
+        display: block;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        cursor: pointer;
+        -webkit-box-shadow: 0 0 0 rgba(255, 246, 8, 0.75);
+        box-shadow: 0 0 0 rgba(255, 246, 8, 0.75);
+        position: absolute;
+        left: 50%;
+        top: 58%;
+        margin-left: 60px;
+        margin-top: 0;
+        border: 3px solid #ff6b02;
+        text-align: center;
+        background: #ff6b02;
+        padding-top: 5px;
+
+        ion-icon{
+            font-size: 25px;
+            color: #ffd607;
+        }
+
+        &:active{
+            background: rgba(255,107,2,1);
+            background: -moz-radial-gradient(center, ellipse cover, rgba(255,107,2,1) 0%, rgba(255,246,8,1) 100%);
+            background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,107,2,1)), color-stop(100%, rgba(255,246,8,1)));
+            background: -webkit-radial-gradient(center, ellipse cover, rgba(255,107,2,1) 0%, rgba(255,246,8,1) 100%);
+            background: -o-radial-gradient(center, ellipse cover, rgba(255,107,2,1) 0%, rgba(255,246,8,1) 100%);
+            background: -ms-radial-gradient(center, ellipse cover, rgba(255,107,2,1) 0%, rgba(255,246,8,1) 100%);
+            background: radial-gradient(ellipse at center, rgba(255,107,2,1) 0%, rgba(255,246,8,1) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff6b02', endColorstr='#fff608', GradientType=1 );
         }
     }
 }
