--- a/src/pages/curiosity/curiosity.scss
+++ b/src/pages/curiosity/curiosity.scss
@@ -6,4 +6,58 @@ page-curiosity {
     .content-md, .content-ios{
         background-color: transparent;
     }
+
+    .toolbar-background-md, .toolbar-background-ios{
+        border: 0;
+        background: transparent;
+    }
+
+    .header-md::after, .header-ios::after{
+        background: transparent;
+        border: 0;
+        box-shadow: none;
+        display: none;
+    }
+
+    .bar-button{
+        color: #fff;
+    }
+
+    .scroll-content{
+        margin-top: 135px !important;
+        // margin-bottom: 45px;
+
+        *{
+            color: #fff;
+        }
+
+        h1{
+            font-weight: bold;
+            text-transform: uppercase;
+            line-height: 20px;
+            small{
+                font-size: 0.6em;
+            }
+        }
+        h1, h1 *{
+            color: #ffd607;
+            text-align: center;
+        }
+    }
+
+    ion-grid{
+        background-color: rgba(255,255,255,0.5)
+    }
+
+    .info{
+        padding: 15px;
+        li{
+            margin-bottom: 15px;
+            img{
+                border-radius: 15px;
+                margin: 10px 0;
+            }
+        }
+    }
 }
+
